<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:hint="@string/hint"
            android:lines="30"
            android:maxLines="40"
            android:singleLine="false"
            android:text="@string/tagline" />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/speak_status"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speak" />

            <Button
                android:id="@+id/speak_w_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speak_w_notify" />

        </LinearLayout>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop" />


        <ToggleButton
            android:id="@+id/mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/stop"
            android:textOff="@string/mute"
            android:textOn="@string/mute" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/available_languages"/>

    </LinearLayout>

</ScrollView>